// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drag slow drag 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1407,
          11,
        ],
        "axisVelocity": Array [
          -0.0625,
          0.03125,
        ],
        "debugData": null,
        "deltaTotal": -1407,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        193,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -1407,
          11,
        ],
        "axisVelocity": Array [
          -0.0625,
          0.03125,
        ],
        "debugData": null,
        "deltaTotal": -1407,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": true,
      },
      "range": Array [
        0,
        193,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`drag square move - trackpad (tl -> tr -> br -> bl -> tl) 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -408,
          77,
        ],
        "axisVelocity": Array [
          0.011363636363636364,
          0,
        ],
        "debugData": null,
        "deltaTotal": -397,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        206,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDeltas": Array [
          -408,
          77,
        ],
        "axisVelocity": Array [
          0.011363636363636364,
          0,
        ],
        "debugData": null,
        "deltaTotal": -397,
        "deltaVelocity": 0,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
        "willEndSoon": false,
      },
      "range": Array [
        0,
        206,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
